# Cmake_learning

./: LICENSE  README.md
example_offical/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
make_file_example/singlefile/: compile.sh
make_file_example/withheader/: Makefile  Makefile1  Makefile2  Makefile3
make_file_example/withheader/src/: main.cpp  test.cpp
single_file_example/: CMakeLists.txt  test.cpp
with_header_example/: CMakeLists.txt
with_header_example/inc/: test.hpp
with_header_example/src/: test.cpp
with_shared_lib_example/: CMakeLists.txt  main.cpp
with_shared_lib_example/test1/: CMakeLists.txt
